Cannot fork with auditing file relative path

XMLWordPrintableJSON

    • Type: Bug
    • Resolution: Done
    • Priority: Major - P3
    • 2.5.5
    • Affects Version/s: None
    • Component/s: Admin
    • None
    • ALL
    • Hide

      Error case:

      /data/m/ent/mongo: ./mongod --auditLog jsonfile --auditPath ./s1a.log --shardsvr --dbpath /data/db/s1 --fork --logpath ./s1.log
      about to fork child process, waiting until server is ready for connections.
      forked process: 26187
      ERROR: child process failed, exited with error number 1
      

      Successful case (note command line params):

      /data/m/ent/mongo: ./mongod --shardsvr --dbpath /data/db/s1 --fork --logpath ./s1.log
      about to fork child process, waiting until server is ready for connections.
      forked process: 26190
      child process started successfully, parent exiting
      
      Show
      Error case: /data/m/ent/mongo: ./mongod --auditLog jsonfile --auditPath ./s1a.log --shardsvr --dbpath /data/db/s1 --fork --logpath ./s1.log about to fork child process, waiting until server is ready for connections. forked process: 26187 ERROR: child process failed, exited with error number 1 Successful case (note command line params): /data/m/ent/mongo: ./mongod --shardsvr --dbpath /data/db/s1 --fork --logpath ./s1.log about to fork child process, waiting until server is ready for connections. forked process: 26190 child process started successfully, parent exiting
    • None
    • None
    • None
    • None
    • None
    • None
    • None

      When it fails, it successfully opens the server log file, but the auditing log file does not get created. The server log file is empty.

      I can successfully start the server by using & instead of --fork, and everything appears to work properly, including both log files. Therefore, I suspect the problem lies in the interaction of the --fork code with the logging infrastructure code.

            Assignee:
            Andy Schwerin (Inactive)
            Reporter:
            Eric Milkie
            Votes:
            0 Vote for this issue
            Watchers:
            3 Start watching this issue

              Created:
              Updated:
              Resolved: