SERVER-12202 Use logging system to report failures during runGlobalInitializers in mongod/mongos.